'yank-media-autoselect-function' and/or 'yank-media-preferred-types' to
change the selection rules.

** Miscellaneous

---
*** 'tooltip-mode' now shows tooltips after delay on TTY frames.
Display of tooltips on text-only terminals now happens after
'tooltip-delay' as it does on GUI terminals.  To get back the old
behavior, customize the value of 'tooltip-delay' to zero.

---
*** cdl.el is now obsolete.
Use 'shell-command' and 'shell-command-on-region' instead.

---
*** echistory.el is now obsolete.

---
*** hashcash.el is now obsolete.
It is believed to no longer be useful as a method to fight spam.

---
*** kermit.el is now obsolete.

---
*** New user option 'ns-click-through' on Nextstep (GNUstep/Mac OS).
This controls whether activation clicks are passed through to Emacs
commands.  When nil, clicking on an inactive Emacs frame will only
activate it.  When t (the default), the click will both activate the
frame and be interpreted as a command.

---
*** New user option 'display-fill-column-indicator-warning'.
Customize it to a non-nil value to have the fill-column indicators
change their face if the current line exceeds the 'fill-column'.  The
new face 'display-fill-column-indicator-warning-face' is used to
highlight the fill-column indicators.  By default this is disabled.


* New Modes and Packages in Emacs 31.1

** New major modes based on the tree-sitter library

*** New major mode 'markdown-ts-mode'.
A major mode based on the tree-sitter library for editing Markdown files.

*** New major mode 'mhtml-ts-mode'.
An optional major mode based on the tree-sitter library for editing HTML
files.  This mode handles indentation, fontification, and commenting for
embedded JavaScript and CSS.

---
*** New major mode 'go-work-ts-mode'.
A major mode based on the tree-sitter library for editing "go.work"
files.  If tree-sitter is properly set-up by the user, it can be
enabled for files named "go.work".


* Incompatible Lisp Changes in Emacs 31.1
